azure-quickstart-template-with-public-ip/azuredeploy.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "resourceNamePrefix": {
      "type": "string",
      "defaultValue": "altus-quickstart",
      "metadata": {
        "description": "Prefix for resource names"
      }
    },
    "dnsPrivateZoneName": {
      "type": "string",
      "defaultValue": "altus.quickstart",
      "metadata": {
        "description": "DNS private zone name"
        }
    },
    "networkAddressSpace": {
      "type": "string",
      "defaultValue": "10.3.0.0/24",
      "metadata": {
        "description": "Virtual Network address space"
      }
    }
  },
  "variables": {
    "templateAPIVersion": "2017-05-10",
    "contentVersion": "1.0.0.0",
    "typeHandlerVersion": "2.0",
    "resourceAPIVersions": {
      "virtualNetworks": "2017-06-01",
      "networkSecurityGroups": "2017-06-01",
      "dnsZones": "2017-10-01",
      "userAssignedIdentities": "2015-08-31-PREVIEW"
    },
    "location": "[resourceGroup().location]",
    "names": {
      "networkSecurityGroup": "[concat(parameters('resourceNamePrefix'), '-nsg')]",
      "virtualNetwork": "[concat(parameters('resourceNamePrefix'), '-vnet')]",
      "virtualNetworkSubnet": "default",
      "dnsZone": "[parameters('dnsPrivateZoneName')]",
      "userAssignedIdentity": "[concat(parameters('resourceNamePrefix'), '-ua-msi')]"
    }
  },
  "resources": [
    {
      "apiVersion": "[variables('resourceAPIVersions').networkSecurityGroups]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('names').networkSecurityGroup]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH_116",
            "properties": {
              "description": "Allows SSH traffic to 52.88.35.116/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "52.88.35.116/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_7",
            "properties": {
              "description": "Allows SSH traffic to 52.37.120.7/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "52.37.120.7/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_144",
            "properties": {
              "description": "Allows SSH traffic to 50.112.20.144/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "50.112.20.144/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_60",
            "properties": {
              "description": "Allows SSH traffic to 34.211.1.60/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "34.211.1.60/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_237",
            "properties": {
              "description": "Allows SSH traffic to 34.210.228.237/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "34.210.228.237/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 104,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_120",
            "properties": {
              "description": "Allows SSH traffic to 52.26.206.120/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "52.26.206.120/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('resourceAPIVersions').virtualNetworks]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('names').virtualNetwork]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('networkAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('names').virtualNetworkSubnet]",
            "properties": {
              "addressPrefix": "[parameters('networkAddressSpace')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('resourceAPIVersions').dnsZones]",
      "type": "Microsoft.Network/dnszones",
      "name": "[variables('names').dnsZone]",
      "location": "global",
      "dependsOn": ["[concat('Microsoft.Network/virtualNetworks/', variables('names').virtualNetwork)]"],
      "properties": {
        "zoneType": "Private",
        "registrationVirtualNetworks": [
          {
            "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('names').virtualNetwork)]"
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('resourceAPIVersions').userAssignedIdentities]",
      "type": "Microsoft.ManagedIdentity/userAssignedIdentities",
      "name": "[variables('names').userAssignedIdentity]",
      "location": "[variables('location')]"
    }
  ]
}
